--- a/main.css
+++ b/main.css
@@ -2,4 +2,47 @@ body {
     background-image: url(loginresources/turntable.jpg);
     background-size: cover;
     width: 100%;
+    height: 100vh;
+    margin: 0;
+}
+
+main {
+    background-color: rgba(71, 69, 69, 0.7);
+    height: 300px;
+    width: 600px;
+    margin: 0;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    border-radius: 25px;
+}
+
+h1 {
+    color: aliceblue;
+    position: relative;
+    margin: 0;
+    text-align: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+input {
+    height: 30px;
+    width: 40%;
+    border-radius: 10px;
+}
+
+button {
+    height: 40px;
+    padding: 0 20px 0 20px;
+    left: 25%;
+}
+
+button,
+input {
+    display: block;
+    margin-top: 25px;
+    margin-left: 10px;
+    position: relative;
 }
