--- a/main.css
+++ b/main.css
@@ -7,9 +7,9 @@ body {
 }
 
 main {
-    background-color: rgba(71, 69, 69, 0.7);
-    height: 300px;
-    width: 600px;
+    background-color: rgba(255, 255, 255, 0.95);
+    height: 60%;
+    width: 20%;
     margin: 0;
     position: fixed;
     top: 50%;
@@ -20,29 +20,30 @@ main {
 }
 
 h1 {
-    color: aliceblue;
+    color: black;
     position: relative;
-    margin: 0;
+    margin: 15% 0 10% 0;
     text-align: center;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 input {
     height: 30px;
-    width: 40%;
+    width: 50%;
     border-radius: 10px;
+    margin: auto;
+    margin-top: 20px;
 }
 
 button {
     height: 40px;
     padding: 0 20px 0 20px;
-    left: 25%;
+    margin: auto;
+    margin-top: 40px;
 }
 
 button,
 input {
     display: block;
-    margin-top: 25px;
-    margin-left: 10px;
     position: relative;
 }
