--- a/my-app/src/styles.css
+++ b/my-app/src/styles.css
@@ -1,5 +1,30 @@
 /* You can add global styles to this file, and also import other style files */
 
+body {
+    font-family: 'Roboto', sans-serif;
+    font-size: 18px;
+    line-height: 22px;
+    color: #010000;
+    max-width: 1920px;
+    margin: 0 auto;
+    padding: 0;
+}
+
 footer {
     color: blue;
+}
+
+#container {
+    width: 100%;
+    max-width: 1345px;
+    margin: 0 0 20px 0;
+    padding: 0;
+}
+
+header {
+    display: block;
+    width: 100%;
+    height: 150px;
+    position: relative;
+    background-color: antiquewhite
 }
