working with navbar

--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -1,4 +1,6 @@
-<header></header>
-<nav></nav>
-<contentArea></contentArea>
-<footer></footer>
+<div>
+    <header></header>
+    <nav></nav>
+    <contentArea></contentArea>
+    <footer></footer>
+</div>
