--- a/my-app/src/styles.css
+++ b/my-app/src/styles.css
@@ -26,5 +26,52 @@ header {
     width: 100%;
     height: 150px;
     position: relative;
-    background-color: antiquewhite
+    background-color: antiquewhite;
+    margin-bottom: 5px;
+}
+
+header logo .img {
+    position: absolute;
+    left: 10px;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
+
+nav {
+    display: inline-block;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0;
+    background: #010000;
+}
+
+nav,
+nav ul {
+    margin: 0;
+    padding: 0;
+}
+
+nav ul li {
+    display: inline;
+    margin: 0 5px;
+}
+
+nav ul li a {
+    font-size: 22px;
+    line-height: normal;
+    text-align: center;
+    color: #d6bdbd;
+}
+
+nav ul li a:hover {
+    background: #ffffff;
+}
+
+@media only screen and (max-width: 1345px) {
+    #container {
+        width: auto;
+        margin: 0 3%;
+    }
 }
