fuckton of changes

--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -1,5 +1,7 @@
-<div>
-    <nav></nav>
+<nav></nav>
+<div id="container">
+
     <contentArea></contentArea>
-    <footer></footer>
+
 </div>
+<footer></footer>
