--- a/my-app/src/app/footer/footer.html
+++ b/my-app/src/app/footer/footer.html
@@ -1,1 +1,9 @@
-<h1>Footer</h1>
+<ul>
+    <li><i class="fa fa-instagram"></i></li>
+    <li><i class="fa fa-github"></i></li>
+    <li>
+        <p>Copyright © 2018 Lukas Cedving Sweden,<br/> Inc. All rights reserved.</p>
+    </li>
+    <li><i class="fa fa-facebook-official"></i></li>
+    <li><i class="fa fa-linkedin"></i></li>
+</ul>
