--- a/my-app/src/app/contentArea/contentArea.html
+++ b/my-app/src/app/contentArea/contentArea.html
@@ -1,1 +1,12 @@
-<h1>Page Content Here</h1>
+<section class="main">
+
+    <h1>Intro</h1>
+
+    <div class="content">
+        <p>
+            Welcome to my portfolio, this is a work in progress and this is just a sample text for taking up space.
+        </p>
+
+    </div>
+
+</section>
