changed background picture, added routers, linked icons in footer to websites

--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -1,7 +1,7 @@
 <nav></nav>
 <div id="container">
 
-    <contentArea></contentArea>
+    <router-outlet></router-outlet>
 
 </div>
 <footer></footer>
