--- a/my-app/src/app/footer/footer.html
+++ b/my-app/src/app/footer/footer.html
@@ -1,9 +1,9 @@
 <ul>
-    <li><i class="fa fa-instagram"></i></li>
-    <li><i class="fa fa-github"></i></li>
+    <li><a href="https://www.instagram.com/lukascedving/" target="_blank"><i class="fa fa-instagram"></i></a></li>
+    <li><a href="https://github.com/lukascedving" target="_blank"><i class="fa fa-github"></i></a></li>
     <li>
         <p>Copyright © 2018 Lukas Cedving Sweden,<br/> Inc. All rights reserved.</p>
     </li>
-    <li><i class="fa fa-facebook-official"></i></li>
-    <li><i class="fa fa-linkedin"></i></li>
+    <li><a href="https://www.facebook.com/lukas.cedving" target="_blank"><i class="fa fa-facebook-official"></i></a></li>
+    <li><a href="https://www.linkedin.com/in/lukas-cedving-51871891/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
 </ul>
