--- a/my-app/src/app/nav/nav.html
+++ b/my-app/src/app/nav/nav.html
@@ -1,9 +1,9 @@
 <ul>
     <li>
-        <a><i class="fa fa-home"></i></a>
+        <a routerLink="/"><i class="fa fa-home"></i></a>
     </li>
-    <li><a>Projects</a></li>
-    <li><a>Skills</a></li>
-    <li><a>About Me</a></li>
+    <li><a routerLink="/project">Projects</a></li>
+    <li><a routerLink="/skills">Skills</a></li>
+    <li><a routerLink="/about">About Me</a></li>
     <li><a><i class="fa fa-search"></i></a></li>
 </ul>
