--- a/my-app/src/styles.css
+++ b/my-app/src/styles.css
@@ -9,7 +9,7 @@ body {
     height: 100vh;
     margin: 0 auto;
     padding: 0;
-    background-image: url(assets/graphics/turntable.jpg);
+    background-image: url(assets/graphics/phongnha.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -19,7 +19,7 @@ nav a img {
 }
 
 footer {
-    background-color: rgba(0, 0, 0, 0.205);
+    background-color: rgba(0, 0, 0, 0.5);
     width: 100%;
     height: 60px;
     position: fixed;
@@ -35,7 +35,7 @@ footer ul {
 }
 
 footer ul li {
-    color: rgb(59, 55, 55);
+    color: rgb(236, 226, 226);
     list-style-type: none;
     display: inline-block;
     margin: 0 5px 0 5px;
@@ -52,6 +52,14 @@ footer ul li i {
     bottom: 10px;
     margin: 0 5px 0 5px;
     transform: scale(1.5);
+}
+
+footer ul li a:link {
+    color: #ffffff;
+}
+
+footer ul li a:visited {
+    color: #ffffff;
 }
 
 footer ul li i:hover {
@@ -90,7 +98,7 @@ footer ul li i:hover {
     top: 8%;
     padding: 5px;
     background: rgba(0, 0, 0, 0.651);
-    box-shadow: -5px 5px rgba(0, 0, 0, 0.329);
+    box-shadow: -3px 3px rgba(0, 0, 0, 0.329);
 }
 
 header {
@@ -147,6 +155,10 @@ nav ul li {
     padding: 0 5 0 5;
 }
 
+nav ul li:last-child {
+    float: right;
+}
+
 nav ul li a {
     display: block;
     font-size: 16px;
@@ -154,11 +166,6 @@ nav ul li a {
     text-align: center;
     color: #ffffff;
     padding: 15px 20px;
-}
-
-a:hover {
-    background: #ffffff;
-    color: #010000;
 }
 
 #container .main {
