changed projects page

--- a/my-app/src/app/project/project.html
+++ b/my-app/src/app/project/project.html
@@ -1,11 +1,8 @@
-<section class="main">
+<section class="projectMain">
 
-    <h1>Project</h1>
 
-    <div class="content">
-        <p>
-            Welcome to my portfolio, this is a work in progress and this is just a sample text for taking up space.
-        </p>
+    <div class="projectContent">
+
 
     </div>
 
